Changelog
=========


3.1.2 (unreleased)
------------------

- Filtering listings: do not flush all params but flush pagenumber only.
  [jone]

- Hide label of "Filter" box, but keep it for accessibility rasons.
  [jone]

- Make search function more robust, so that it is possible to have a non-listing
  view, switchin to a listing view when a search term is entered.
  [jone]

- Fix bug in listing menu generator.
  [jone]

- Add a default "reset table configuration" folder_contents action (which is only
  visible on tabbedview tabs).
  [jone]


3.1.1 (2012-02-28)
------------------

- Adjust MANIFEST.in: add include for rst files (reamde.rst).
  [phgross]


3.1 (2012-02-27)
----------------

- Added some French translations
  [ttschanz]

- Fix submenu click event binding. Dont use live(click).
  [mathias.leimgruber]

- Implemented show_menu condition.
  [mathias.leimgruber]

- Add form authenticator to listing forms.
  [jone]

- Fix bug where the persistent ext-js grid state when trying to acces the sort information.
  The sort information may not be there in some cases.
  [jone]

- Remove old i18n directory. #3
  [jone]

- Make both JS implementation (default and extjs) work on same branch:

  - Better use of ftwtable jquery plugin in tabbed view.
  - Register a default tabbedview dictstorage, stored on the plone site.
  - Fix markup for extjs implementation.
  - Implement selecting and menu support for default implementation.
  - Respect extjs-config in registry for deciding if the extjs JS should be loaded.
  - Remove non-ftw.tabbedview translations added from custom projects.
  - Various cleanup and minor bug fixes.

  [jone]


3.0 (2011-11-17)
----------------

- Moved hidden input element *into* tabbedview_form so it always gets
  submitted.
  [lgraf]

- Implements a dynamic batchbox for batched listing views, which allows to
  change the batchsize (hits per site) dynamically.
  [phgross]

- Automaticly reset batching while filtering (with the textfilter)